--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,22 @@
                 <div>
                   <h1 class="display-1 app-green">Music Timer</br><img src="{{url_for('static', filename='Spotify_Logo_RGB_Green.png')}}" class="d-inline-block align-top" width="50%" /></h1>
                   <p class="app-white h3">Set a timer and listen to your Spotify playlist while you wait.</p><br>
-                  <a class="btn btn-lg app-bg-white app-blue px-5" href="/timer" role="button">Login</a>
+                  {% if stage==0 %}
+                  <form action="/timer/" method="post">
+                    <button class="btn btn-lg app-bg-white app-blue px-5" type="submit" role="button">Login</button>
+                  </form>
+                  {% elif stage==1 %}
+                  <div class="row container px-0">
+                    <div class="col-12 col-lg-6">
+                        <form name="myform" method="POST" class="input-group">
+                            <input type="number" class="form-control" id="InputMinutes" required placeholder="Timer (in Minutes)">
+                            <button class="btn app-bg-green app-white" type="submit" id="button-addon2">Enter</button>
+                            <!-- <input type="range" name="InputMinutes" id="InputMinutes"> -->
+                        </form>
+                    </div>
+                  </div>
+                  <script>window.history.pushState("object or string", "Title", "/");</script>
+                  {% endif %}
                 </div>
               </div>
               <div class="col-12 col-lg-6 d-none d-lg-block d-flex h-100">
