--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,7 @@
                   <script>window.history.pushState("object or string", "Title", "/");</script>
                   {% else %}
                   <p class="app-white h3">Set a timer and listen to your Spotify playlist while you wait.</p><br>
-                  <form action="/timer/" method="post">
+                  <form action="/timer/" method="">
                     <button class="btn btn-lg app-bg-white app-blue px-5" type="submit" role="button">Login</button>
                   </form>
                   {% endif %}
