--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/landing.css') }}">
 <script src="{{ url_for('static',filename='landing.js') }}"> </script>
           <div class="container" id="" style="height: 90%;">
-            <div class="row container h-100">
+            <div class="row container h-100 mx-0">
               <div class="col-12 col-lg-6 d-flex align-items-center h-100">
                 <div>
                   <h1 class="display-1 app-green">Music Timer</br><img src="{{url_for('static', filename='Spotify_Logo_RGB_Green.png')}}" class="d-inline-block align-top" width="50%" /></h1>
@@ -18,18 +18,23 @@
         {% endwith %}
                   {% if stage==1 %}
                   <p class="app-white h3">User: {{user_id}}</p><br>
-                  <div class="row container px-0">
-                    <div class="col-12 col-lg-6">
-                        <form name="myform" method="POST" action="/playlist" id="timer" class="input-group">
+                  <div class="row container px-0 mx-0">
+                    <div class="col-12 col-lg-6 px-0">
+                        <form name="myform" method="POST" action="{{ url_for('playlist') }}" class="">
                           {{ form.hidden_tag() }}
                           <!-- <fieldset>
                             <input type="number" class="form-control" id="timer" required placeholder="Timer (in Minutes)">
                             <button class="btn app-bg-green app-white" type="submit" id="button-addon2">Enter</button>
                           </fieldset> -->
-                          <p class="">
-                            <span class="app-white">{{form.timer.label}}</span><br>
-                            <span>{{form.timer(size=20)}}{{ form.submit() }}</span>
-                          </p>
+                          <!-- <div class="input-group w-100">
+                            <input type="text" class="form-control" id="timer" placeholder="Timer (in minutes)" aria-label="Timer (in minutes)" aria-describedby="Timer (in minutes)">
+                            <button class="btn app-bg-green app-white" type="button" id="submit">Enter</button>
+                          </div> -->
+                          <span class="app-white">{{form.timer.label}}</span><br>
+                          <div class="input-group w-100">
+                            
+                            {{form.timer(class="form-control")}}{{form.submit(class="btn app-bg-green app-white") }}
+                          </div>
                             
                         </form>
                     </div>
