--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -154,6 +154,23 @@ body {
     filter: grayscale(0);
 }
 
+a.app-no-hover:link {
+  text-decoration: none;
+}
+a.app-no-hover:visited {
+  text-decoration: none;
+}
+a.app-no-hover:hover {
+  text-decoration: none;
+}
+a.app-no-hover:active {
+  text-decoration: none;
+}
+
+button {
+  border-radius: 0.25rem;
+}
+
 .app-card {
   height: auto;
   width: auto;
@@ -163,10 +180,20 @@ body {
 }
 
 .app-card .app-card-footer-text {
+  width: 100%;
   color: var(--spotify-white);
   display: inline-block;
   vertical-align: middle;
   padding: 0.375rem 0.375rem;
+  /* white-space: nowrap; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card-img-top {
+  height: auto;
+  width: 100%;
+  object-fit: cover;
 }
 
 .app-card:hover {
