--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,27 +6,17 @@
             <div class="row container h-100 mx-0">
               <div class="col-12 col-lg-6 d-flex align-items-center h-100">
                 <div>
-                  <h1 class="display-1 app-green">Music Timer</br><img src="{{url_for('static', filename='Spotify_Logo_RGB_Green.png')}}" class="d-inline-block align-top" width="50%" /></h1>
+                  <a class="app-no-hover" href="/"><h1 class="display-1 app-green app-fade">Music Timer</br><img src="{{url_for('static', filename='Spotify_Logo_RGB_Green.png')}}" class="d-inline-block align-top" width="50%" /></h1></a>
                   {% if stage==1 %}
                   <p class="app-white h3">User: {{user_id}}</p><br>
                   <div class="row container px-0 mx-0">
                     <div class="col-12 col-lg-6 px-0">
                         <form name="myform" method="POST" action="{{ url_for('playlist') }}" class="">
                           {{ form.hidden_tag() }}
-                          <!-- <fieldset>
-                            <input type="number" class="form-control" id="timer" required placeholder="Timer (in Minutes)">
-                            <button class="btn app-bg-green app-white" type="submit" id="button-addon2">Enter</button>
-                          </fieldset> -->
-                          <!-- <div class="input-group w-100">
-                            <input type="text" class="form-control" id="timer" placeholder="Timer (in minutes)" aria-label="Timer (in minutes)" aria-describedby="Timer (in minutes)">
-                            <button class="btn app-bg-green app-white" type="button" id="submit">Enter</button>
-                          </div> -->
                           <span class="app-white">{{form.timer.label}}</span><br>
                           <div class="input-group w-100">
-                            
                             {{form.timer(class="form-control")}}{{form.submit(class="btn app-bg-green app-white") }}
                           </div>
-                            
                         </form>
                     </div>
                   </div>
@@ -51,11 +41,6 @@
                     <span class="bar n8">H</span>
                   </div>
               </div>
-              <!-- <div class="d-none d-lg-block h-100 p-0 app-right" >
-                <div class="h-100">
-                  <img src="{{url_for('static', filename='disc.png')}}" height="100%" class="align-top" id="" loading="lazy" alt="">
-                </div>
-              </div> -->
             </div>
           </div>
 {% endblock %}
