--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
 <body>
     <section class="app-vh" id="">
           {% block content %}{% endblock %}
+          <script>window.history.pushState("object or string", "Title", "/");</script>
     </section>
 </body>
 </html>
